@@ -1,3 +1,15 @@
+3/8/19
+	Features:
+		- Added Airstrike power-up
+		- Added Double-Damage weapon
+		- Added 3-way weapon
+		- Added weapon swap functionality
+
+3/8/19
+	Features:
+		- Added Grenade special
+		- Added special swap functionality
+
 2/24/19
 	Features:
 		- Changed damage system.  Enemies colliding with the player no longer get destroyed, but hit the player instead.
